bugfix visible balance & visible corner

--- a/src/components/Rate/Rate.module.css
+++ b/src/components/Rate/Rate.module.css
@@ -11,6 +11,7 @@
   list-style-type: none;
   padding: 0;
   margin: 0 auto;
+  margin-top: 30px;
 }
 
 .RateHead {
@@ -23,6 +24,7 @@
   width: 100% / 3;
   height: 50px;
   background-color: var(--light-grey);
+  border-radius: 30px 30px 0px 0px;
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 20px;
